# AI-Telegram-News-Bot

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  PROJECT_ROADMAP.md  README.md  pyproject.toml  requirements.txt
ci/: ci.yml
src/newsbot/: __init__.py  __main__.py  main.py  settings.py
src/newsbot/db/: __init__.py  engine.py  models.py  repositories.py
tests/: conftest.py
tests/unit/: test_cli_config.py  test_db_engine.py  test_db_repositories.py  test_settings.py  test_smoke.py
